--- a/css/stylestest.css
+++ b/css/stylestest.css
@@ -72,9 +72,7 @@ a{
   text-decoration: none;
   color: white;
   }
-hr {
-  border-top: 3px solid #c78b07;
-}
+
 /*grid up whole site*/
 /*.container{
   width:450px;
@@ -130,7 +128,7 @@ nav ul li a{
   color: white;
 }
 
-.header-welcome .button{
+.welcome-btn{
   background-color: #c78b07;
 }
 .header-welcome a{
@@ -248,9 +246,11 @@ grid-column: 1 / span 2;
   grid-column: 1;
   grid-row: 3;
 }
+/* ❗ Not Working ❗ */
 .contact{
   display: grid;
   grid-template-columns: 1fr 1fr;
+  grid-template-rows: 5;
 }
 .contact h2{
   grid-column: 1 / span 2;
@@ -265,7 +265,7 @@ grid-column: 1 / span 2;
   grid-row:3;
 }
 .location h3{
-  grid-column: 2;
+  grid-column: 1;
   grid-row:2;
 }
 .location iframe{
