--- a/css/styles.css
+++ b/css/styles.css
@@ -84,10 +84,12 @@ img{
 	max-width: 100%;
 	height: auto;
 }
+
+/*--------- ✅ ----------*/
 .logo{
   background-color:#c78b07;
-	padding-top: 20px;
-	padding-bottom: 20px;
+	padding-top: 17px;
+	padding-bottom: 17px;
 }
 
 nav{
@@ -100,7 +102,7 @@ nav a:visited{
 	color:#c78b07;
 	font-size: 18px;
 	padding-top: 17px;
-	padding-bottom:17px;;
+	padding-bottom:17px;
 	text-align: center;
 	text-decoration: none;
 }
@@ -110,13 +112,12 @@ nav li.active a:visited  {
 	background-color: #c78b07;
 	color: #222;
 }
-/* ❗ if input class, icon moves
-if nav form doesn't stretch flex-box grow 1❗ */
+
 nav form{
 display: flex;
 align-items: stretch;
-
 }
+
 nav input{
 	flex-grow: 1;
 	font-size: 18px;
@@ -130,6 +131,7 @@ nav button{
 }
 
 /* 🙀   WECLOME  🙀  */
+/*--------- ✅ ----------*/
 .header-welcome{
   background-image: url("../images/main-banner.jpg");
   background-repeat: no-repeat;
@@ -158,26 +160,33 @@ nav button{
 /*---------About--------*/
 .section-about{
 	background-color: #ffe6ac;
+	margin-bottom: 18px;
 }
+
 /*----------Our Services--------*/
 .services{
   background-color: #ffe6ac;
-	margin-bottom: 1em;
+	margin-bottom: 14px;
+	padding-bottom: 14px;
 }
 .services img{
   width: 100%;
 }
-.services p,
 .services h3 {
-
+	padding-top:24px;
+	padding-left: 14px;
+	padding-bottom: 14px;
+}
+.services p{
+	padding-left: 14px;
 }
 .services button{
 	background-color: #222;
 	color: white;
-	padding: 40px 32px 36px 34px;
+	padding: 33px;
 	font-size: 21px ;
-	margin: 14px;
 	border: none;
+	margin-left: 14px;
 	}
 
 /*-------Vision----------*/
@@ -188,44 +197,66 @@ nav button{
   background-size: cover; /* ❗ fix postion/size? ❗ */
 	width: 100%;
 	color:white;
-
 }
+.section-vision h3{
+padding:14px 0px;;
+}
+.vision-btn{
+	font-size: 20px;
+	font-weight: bold;
+	color: white;
+	padding:33px;
+	background-color: rgba(0, 0, 0, 0.5);
+	border-color: #c78b07;
+}
+
 
 /*--------Team-----------*/
-.section-team{
-	margin: 10px;
-}
 
 .profile-grid{
   background-color: #ffe6ac;
+	margin-bottom: 14px;
 }
 .section-team img{
 	width: 100%;
 }
+.section-team h3{
+	padding-top: 7px;
+}
 .section-team h4{
-	border-bottom: 1px;
+	font-weight: bold;
+	border-bottom: 2px;
 	border-color: #c78b07;
 	border-style: solid;
-	padding: 0.3rem;
+	
 }
-.text{
-	padding: 14px;
-
+.section-team p{
+	padding-top: 14px;
+}
+.profile-text{
+	padding-left: 14px;
+padding-bottom:14px;
 }
 
 
 /*----------Contact-------*/
 
-.section-contact{
-	margin: 1rem;
-}
-.section-contact h3{
-	padding:1rem 0;
-} 
 
+.section-contact h2{
+	padding-top: 24px;
+	padding-bottom: 4px;
+} 
+.section-contact h3{
+	padding-bottom:4px;
+}
+
+.section-contact label{
+	font-size:14px ;
+}
 .message input{
   width: 100%;
-  margin: 8px 0 16px 0;
+	font-size: 20px;
+	margin:7px 0;
 }
 .message button{
 	background-color: #222;
@@ -233,26 +264,21 @@ nav button{
 }
 .message textarea {
   width: 100%;
-  height: 100px;
-  margin: 8px 0;
-  background-color: #f8f8f8;
+  height: 150px;
+  background-color: white;
   resize: none;
+	font-size: 20px;
 }
-.message div form p{
-  font-size: 24px;
+.section-contact button{
+	margin:18px 0;
+	font-size:21px ;
 }
-.message form{
-  padding: 30px 10px 15px 10px;
-  font-size: 18px;
-}
-.message form p{
-  margin: 1em 0 1em 0 ;
-}
+
 .contact-iframe{
 	position: relative;
 	overflow: hidden;
 	width: 100%;
-	padding-top: 100%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
+	padding-top: 66%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
 	}
 	
 .location iframe{
@@ -269,21 +295,22 @@ nav button{
 
 table{
 	width:100%;
-
+	margin-bottom: 14px;
 }
 table, th, td {
   border:1px solid black;
-	padding:1rem;
-	
+	padding:14px;
 }
 tr:nth-child(1) {
 	background-color: #ffe6ac;
 }
 /*----------Footer-------*/
+footer p{
+	margin: 7px 0;
+}
 footer{
 	background-color: #222;
 	color: #c78b07;
-	padding: 1rem;
 }
 footer a{
 	color: #c78b07;
@@ -300,40 +327,69 @@ footer a{
 .container{
 max-width: 1200px;
 margin: 0 auto;
+padding-left: 120px ;
+padding-right: 120px;
+}
+h1{ 
+	font-size: 81px;
+}
+.logo{
+	background-color: #222222;
+}
+nav .container {
+display: flex;
+justify-content: space-between;
+align-items: center;
+}
+nav ul {
+display: flex;
+}
+.logo{
+  background-color:#222222;
+	padding-top: 20px;
+	padding-bottom: 20px;
+	padding-right:70px;
 }
 
-nav ul, 
-nav form{
-	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
-	}
 
-.section-about .container{
+nav a:link,
+nav a:visited{
+	font-size: 20px;
+	padding-left:45px;
+	padding-right: 45px;
+	padding-top:25px;
+	padding-bottom: 25px;
+}
+
+
+
+
+
+/*header padding for overlay*/
+/*heading font change*/
+
+.section-about{
 display: flex;
 flex-direction: row;
 }
 
-.section-about-text{
+.section-about .text{
 	padding: 1rem;
 }
-/* ❗ acting weird ❗ */
-/*.section-about img{
-	400px;
+.section-about img{
+	width: 100%;
 }
-.section-about-image{
-	width: 5000px;
-}*/
 
 .section-services .container{
 	display: grid;
 	margin: 0.5rem auto;
 	grid-template-columns: repeat(6, 1fr);
-	grid-template-rows: 70px 1fr 1fr;
+	grid-template-rows: 70px 714px 630px;
 	grid-column-gap: 14px;
-	grid-row-gap: 11px;
+	grid-row-gap: 5px;
 }
 .section-services h2{
+	font-size: 36px;
 	grid-column: 1 / span 6;
 	grid-row: 1;
 }
@@ -365,8 +421,16 @@ flex-direction: row;
 /* ------------- Team --------*/
 .profile-grid{
 	display: grid;
-	grid-column: 1fr 1fr;
-	grid-row: 1fr;
+	grid-template-columns: 1fr 1fr;
+	grid-template-rows: 1fr;
+}
+.profile-image.bob{
+grid-column: 2;
+grid-row: 1;
+}
+.profile-text.bob{
+	grid-column: 1;
+	grid-row:1;
 }
 /* ----------------- Desktop Contact -------*/
 .section-contact .container{
